# pyread_swift

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  ci_mpi.yml  publish.yml
examples/: read_healpix.py  read_lightcone.py  read_lightcone_mpi.py  read_swift.py  read_swift_mpi_collective.py  read_swift_mpi_distributed.py  read_swift_spherical.py
src/pyread_swift/: __init__.py  io.py  peano.py  read_dataset.py  read_header.py  read_healpix.py  read_lightcone.py  select_region.py  split_selection.py
src/read_swift/: __init__.py  io.py  snapshot.py
src/scripts/: cli.py  combine.py  grid_snapshots.py
tests/: get_ics.sh  test_combine.py  test_read.py  test_read_mpi.py
