[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyread_swift"
version = "1.0.0"
description = "Package to read SWIFT simulation snapshots in MPI."
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["swiftsim", "simulations", "mpi", "numerical"]
dependencies = [
    'numpy',
    'h5py',
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
mpi = ["mpi4py"]
ci = ["pytest"]
ci_mpi = ["mpi4py", "pytest-mpi"]
