[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyread_swift"
version = "1.2.0"
description = "Package to read SWIFT simulation snapshots in MPI."
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["swiftsim", "simulations", "mpi", "numerical"]
dependencies = [
    'numpy<2',
    'h5py',
    'mpi4py',
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

# [project.optional-dependencies]
# scripts = ["virgo@git+https://github.com/jchelly/VirgoDC"]

[project.scripts]
pyread_swift = "scripts.cli:main"
