[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyread_swift"
version = "1.2.2"
description = "Package to read SWIFT simulation snapshots in MPI."
readme = "README.md"
authors = [{ name = "Stuart McAlpine", email = "stuart.mcalpine@fysik.su.se" }]
license = { file = "LICENCE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["swiftsim", "simulations", "mpi", "numerical"]
dependencies = [
    'numpy',
    'h5py',
    'mpi4py',
    'virgodc',
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyread_swift = "scripts.cli:main"
